Fix application on mobile

--- a/api-github/src/app/layout/header/header.component.scss
+++ b/api-github/src/app/layout/header/header.component.scss
@@ -7,6 +7,10 @@ header {
   .navbar-brand {
     width: 10%;
 
+    @media screen and (max-width: 990px) {
+      width: 60%;
+    }
+
     img {
       width: 70%;
 
